# bluestock-mutual-fund-analytics

./: .gitignore  README.md  data_dictionary.md  github_repository.txt  pyproject.toml  requirements.txt
dashboard/: streamlit_app.py
data/processed/: .gitkeep
nifty100_capstone/: Makefile  NOTE_TO_ADMIN.md  make.bat  requirements.txt
nifty100_capstone/config/: screener_config.yaml
nifty100_capstone/data/raw/: DATASET.xlsx  SUPPORTING_DATASETS.xlsx  additional_details.xlsx  analysis.xlsx  analysis_metrics.xlsx  balance_sheet.xlsx  cash_flow.xlsx  companies.xlsx  documents.xlsx  (+7 more)
nifty100_capstone/db/: schema.sql
nifty100_capstone/notebooks/: exploratory_queries.sql
nifty100_capstone/output/: capital_allocation.csv  load_audit.csv  peer_comparison.xlsx  screener_output.xlsx  validation_failures.csv
nifty100_capstone/scripts/: extract_raw_sheets.py  generate_synthetic_nifty100.py
notebooks/: 01_data_ingestion.ipynb  02_data_cleaning.ipynb  05_advanced_analytics.ipynb  Advanced_Analytics.ipynb  EDA_Analysis.ipynb  Performance_Analytics.ipynb
reports/: Final_Report.md  alpha_beta.csv  amfi_validation_report.md  day1_data_quality_report.md  fund_scorecard.csv  var_cvar_report.csv  weekly_performance_summary.html
scripts/: compute_metrics.py  data_cleaning.py  data_ingestion.py  email_report_generator.py  etl_pipeline.py  generate_dashboard.py  generate_eda_notebook.py  generate_performance_notebook.py  live_nav_fetch.py  load_to_sqlite.py  monte_carlo.py  portfolio_optimization.py  recommender.py  run_analytics.py
sql/: queries.sql  schema.sql
tests/: __init__.py  test_data_ingestion.py
(+16 files in other folders)
